# cpp-chat-soket-app

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: client.c  server.c
src/client/: client.cpp  client.h  clientMessage.cpp  main.cpp
src/common/: globals.h  socket.h
src/server/: main.cpp  server.cpp  server.h
